# cryptography_project

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  components.json  dev-app-update.yml  electron-builder.yml  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.node.json  tsconfig.web.json
algorithms/: index.node
algorithms/src/: lib.rs  main.rs
algorithms/src/algorithms/: caesar.rs
main/: main.ts  preload.ts
rust_crypto/: Cargo.toml  index.d.ts  index.node  package.json  pnpm-lock.yaml
rust_crypto/src/: adapter.rs  error.rs  example.txt  lib.rs  main.rs  traits.rs
rust_crypto/src/algorithms/: aes.rs  aes_constants.rs  aes_helpers.rs  caesar.rs  ecdh.rs  mod.rs  rsa.rs  running_key_cipher.rs  vigenere.rs
rust_crypto/src/utils/: file_handler.rs  logger.rs  mod.rs
src/main/: FileStore.ts  fileHandler.ts  index.ts
src/preload/: index.d.ts  index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  main.tsx
src/renderer/src/assets/: algorithms.json  base.css  main.css
src/renderer/src/components/: BackButton.tsx  CopyButton.tsx  ECDH.tsx  Header.tsx  LogsDialog.tsx  Main.tsx  PasteButton.tsx  constants.ts
src/renderer/src/components/algorithm/: AES.tsx  CaesarCipher.tsx  RSA.tsx  RunningKeyCipher.tsx  (+2 more)
src/renderer/src/hooks/: useClipboard.ts  useLogs.ts  useResult.ts  useTextForm.ts  useTitle.ts
src/renderer/src/lib/: algorithm-util.ts  algorithm-util.tsx  icon-map.ts
src/renderer/src/pages/: algorithm.tsx  algorithms.tsx  decrypt.tsx  home.tsx  key-exchange.tsx  result.tsx
src/shared/: result-util.ts
(+17 files in other folders)
