[package]
name = "rust_crypto"
version = "1.3.0"
edition = "2024"
build = "build.rs"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "3", features = ["napi6"] }
napi-derive = "3"
rand = "0.8"
num-bigint = { version = "0.4", features = ["rand"] }
num-integer = "0.1"
num-traits = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4.42"
once_cell = "1.21.3"

[build-dependencies]
napi-build = "2.2.3"
